crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_invalid_number_octal_like.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
019
TOKENS:
NUMBER_LITERAL "019"

LEX_ERRORS:
LexicalError { kind: InvalidNumber, at_offset: 0 }
