crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_invalid_underscore_exponent_2.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
1e+_10
TOKENS:
NUMBER_LITERAL "1e+_10"

LEX_ERRORS:
LexicalError { kind: InvalidNumber, at_offset: 0 }
