crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_invalid_underscore_float_1.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
123_.45
TOKENS:
NUMBER_LITERAL "123_.45"

LEX_ERRORS:
LexicalError { kind: InvalidNumber, at_offset: 0 }
