crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_unicode_escape_in_string_quote.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
String s = "\u0022";
TOKENS:
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "s"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
STRING_LITERAL "\"\\u0022"

LEX_ERRORS:
LexicalError { kind: UnterminatedString, range: 18..20 }
