crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_unterminated_string_eof.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
"this string has no end
TOKENS:

LEX_ERRORS:
LexicalError { kind: UnterminatedString, range: 0..23 }
